<resources>
    <string name="app_name">Compas</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fragment_create_room_title">Create your Room</string>
    <string name="fragment_create_room_name">Name of the Room</string>
    <string name="fragment_create_room_create">Create Room</string>
    <string name="fragment_notroom_title">You haven´t got a Room,</string>
    <string name="fragment_notroom_subtitle">please create one of them:</string>
    <string name="fragment_notification_element">has invited you to</string>
    <string name="fragment_notification_title">NOTIFICATIONS</string>
    <string name="fragment_notification_accept">Accept</string>
    <string name="fragment_notification_decline">Decline</string>
    <string name="fragment_creation_title">Create a Ticket</string>
    <string name="fragment_creation_title_ticket">Title:</string>
    <string name="fragment_creation_title_ticket_contains">Ticket title</string>
    <string name="fragment_creation_description_ticket">Description:</string>
    <string name="fragment_creation_description_ticket_description">Ticket description</string>
    <string name="fragment_creation_importance_ticket">Importance:</string>
    <string name="fragment_creation_image_ticket">ADD IMAGE</string>
    <string name="fragment_creation_button_create_ticket">CREATE TICKET</string>
    <string name="not_permissions">You havent got permissions for that</string>
    <string name="hint_email">user@compas.com</string>
    <string name="hint_password">*****************</string>
    <string name="sign_in_button">Log In</string>
    <string name="register_in_button">Create One</string>
    <string name="register_in_text">Don`t have an account ?</string>
    <string name="forgot_in_button">Forgot your password ?</string>
    <!--  Fragment Log IN-->
    <string name="register">LOG IN</string>
    <string name="name">NAME:</string>
    <string name="surname">SURNAME:</string>
    <string name="birthdate">BIRTHDATE</string>
    <string name="email">EMAIL:</string>
    <string name="password">PASSWORD:</string>
    <string name="repeatpass">REPEAT PASSWORD:</string>
    <string name="accept">Aceptar la politica de Privacidade de la Empresa y que alamcenemos sus datos</string>
    <string name="logOut">LogOut</string>
    <string name="editUser">User Data</string>
    <string name="tag">TAG_USER:</string>
    <string name="karma">KARMA:</string>
    <string name="aceptar">ACPETAR:</string>
    <string name="myticket">Mis Tickets</string>
    <string name="ticketNoAtendidos">Tickets No Atendidos</string>
    <string name="fragment_creation_user_button">Continue</string>
    <!-- GESTIONAR ROOM FRAGMENT-->
    <string name="fragment_controll_room_permissions">PERMISSIONS</string>
    <!-- USER FRAGMENT -->
    <string name="fragment_user_add_new_user">Add New User:</string>
    <string name="fragment_user_add_new_user_tag">User Tag:</string>
    <string name="fragment_user_add_new_user_tag_example">User#0000</string>
    <string name="fragment_user_admin_title">USER ADMIN EDIT</string>
    <!-- DELETE USER -->
    <string name="alert_dialog_delete_user_title">DELETE USER</string>
    <string name="alert_dialog_delete_user_mssg">Are you sure ?</string>
    <!-- TICKETS FRAGMENT -->
    <string name="fragment_tickets_button_all">All Tickets</string>
    <string name="fragment_tickets_button_my">My Tickets</string>
    <string name="fragment_tickets_button_atendidos">Tickets Attended By Me</string>
    <string name="channel_notification_tickets">notification_chanel_tickets</string>
    <string name="channel_description_notification_tickets">notification_chanel_tickets</string>
    <string name="channel_id">ID_CHANNEL_TICKETS_1234</string>
    <!--Ticket View-->
    <string name="fragment_ticket_selection_aceptar">Accept</string>
    <!-- Menu String -->
    <string name="string_view_ticket_data">View Data</string>
    <string name="string_delete_ticket_data">Delete</string>
    <string name="string_finished_ticket_data">Finished</string>
    <string name="change_photo_menu">Change Avatar</string>
    <!-- Data TIckets -->
    <string name="fragment_data_user_emmiter">User Emmiter :</string>
    <string name="fragment_data_user_Atteded">Responsable :</string>
    <string name="fragment_data_ticket_title">Ticket Data</string>
    <string name="room_tag">Tag : </string>
    <string name="date_creation">Creation Date :</string>
    <string name="number_user">Number Of Users :</string>
    <string name="open_ticket">Open</string>
</resources>
