<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto" android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
            android:text="@string/fragment_user_add_new_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/textView9" android:textAlignment="center"
            android:textSize="24sp" android:textStyle="bold"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
                android:text="@string/fragment_user_add_new_user_tag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/textView11"
                android:paddingRight="@dimen/fab_margin"/>
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/tag" android:layout_weight="1"
                android:hint="@string/fragment_user_add_new_user_tag_example"/>
    </LinearLayout>
    <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/spinner"/>
    <ImageButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content" app:srcCompat="@drawable/ic_menu_send" android:id="@+id/send"
            android:background="@color/clear"/>
</LinearLayout>