<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              tools:context=".view.FragmentViewTickets"
              android:orientation="vertical" android:background="@color/ColorNotSelected">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:gravity="center_horizontal">
        <Button
                android:text="@string/fragment_tickets_button_all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/viewAll" android:background="@color/clear"
                android:padding="@dimen/nav_header_vertical_spacing"/>
        <Button
                android:text="@string/fragment_tickets_button_my"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/myTickets" android:background="@color/clear"
                android:padding="@dimen/nav_header_vertical_spacing"/>
        <Button
                android:text="@string/fragment_tickets_button_atendidos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/AttendByMe" android:background="@color/clear"
                android:padding="@dimen/nav_header_vertical_spacing"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent" android:id="@+id/stack"
            android:layout_marginLeft="@dimen/activity_vertical_margin" android:layout_marginRight="@dimen/fab_margin"
            android:background="#81E1E7F1">
    </LinearLayout>

</LinearLayout>