<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/side_nav_bar"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        android:orientation="vertical"
        android:gravity="bottom">

    <ImageView
            android:layout_width="@dimen/height_width_photo"
            android:layout_height="@dimen/height_width_photo"
            android:paddingTop="@dimen/nav_header_vertical_spacing"
            app:srcCompat="@mipmap/ic_launcher_round"
            android:contentDescription="@string/nav_header_desc"
            android:id="@+id/imageId"/>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/nav_header_vertical_spacing"
                android:text="@string/nav_header_title"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" android:id="@+id/nameUserID"
                android:layout_marginRight="@dimen/height_margin"/>
    </LinearLayout>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nav_header_subtitle"
                android:id="@+id/mailUserID" android:layout_weight="10"/>
        <ImageButton
                android:layout_width="@dimen/height_margin"
                android:layout_height="wrap_content" app:srcCompat="@android:drawable/ic_popup_reminder"
                android:id="@+id/notificationMenu" android:background="@color/clear"
                android:layout_marginRight="@dimen/fab_margin"/>
        <ImageButton
                android:layout_width="@dimen/activity_horizontal_margin"
                app:srcCompat="@android:drawable/btn_dialog"
                android:id="@+id/logOutButton" android:background="@color/clear"
                android:layout_height="wrap_content"/>
    </LinearLayout>
    <TextView
            android:text="@string/fragment_user_add_new_user_tag_example"
            android:layout_width="match_parent"
            android:layout_height="match_parent" android:id="@+id/tagUser"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" android:gravity="bottom"/>

</LinearLayout>
