<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content" android:layout_margin="@dimen/fab_margin"
              android:background="@drawable/common_google_signin_btn_icon_dark_normal_background">

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:gravity="center_horizontal">
        <TextView
                android:text="USERS"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/tagUser"
                android:textStyle="bold" android:textColor="@color/resaltedColor" android:textSize="@dimen/fab_margin"
                android:layout_marginRight="@dimen/nav_header_vertical_spacing"/>
        <TextView
                android:text="@string/fragment_notification_element"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/textView3"
                android:layout_marginRight="@dimen/nav_header_vertical_spacing"/>
        <TextView
                android:text="ROOM"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/nameRoom"
                android:textStyle="bold" android:textColor="@color/resaltedColor" android:textSize="@dimen/fab_margin"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <Button
                android:text="@string/fragment_notification_accept"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/bAccept" android:layout_weight="1"
                android:layout_marginRight="@dimen/height_width_margin"
                android:background="@drawable/common_google_signin_btn_icon_dark_normal_background"/>
        <Button
                android:text="@string/fragment_notification_decline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/bDecline" android:layout_weight="1"
                android:background="@drawable/common_google_signin_btn_icon_dark_normal_background"/>
    </LinearLayout>
</LinearLayout>